# Finguard

./: .gitignore  CLAUDE.md  PktMon.etl  README.md  TUTORIAL.md  VisitQwenProblem.md  new_sections.txt  next_plan.md  phase1.md  phase10.md  phase11.md  phase12.md  phase13.md  phase14.md  phase1_run_2026-01-28.md  phase2.md  phase3.md  phase4.md  phase5.md  phase6.md  phase7.md  phase8.md  phase9.md  questions.txt  review.md  test_fundamentals.db  workbook.md  学习文档.md  守拙价值多元化基金理念.md  项目书.md
.claude/: settings.local.json
config/: rules.yaml
finguard/: CMakeLists.txt  README.md  valuation_curl.cfg  yahoo_cookies.txt
finguard/config/: llm.json  llm.json.example  llm.json.opus_bak2  observability.yaml  rules.yaml  system_prompt.txt  timeout.yaml  valuation.json
finguard/docs/risk/: warnings_index.md
finguard/scripts/: build_all_demo_dbs.py  build_symbol_example_db.py  seed_fundamentals_db.py
finguard/sql/: fundamentals_schema.sql
finguard/sql/examples/: brk_b_backend_example.md  pdd_backend_example.md  tcom_backend_example.md
finguard/src/: main.cpp
finguard/src/core/: allocation_rule.cpp  allocation_rule.h  allocation_types.h  rule_factory.cpp  rule_factory.h
finguard/src/core/rules/: fixed_rules.cpp  fixed_rules.h  shouzhe_rule.cpp  shouzhe_rule.h
finguard/src/data/: fundamentals_db.cpp  fundamentals_db.h
finguard/src/llm/: llm_client.cpp  llm_client.h  llm_client_common.cpp  llm_client_config.cpp  llm_client_internal.h  llm_client_stream.cpp
finguard/src/risk/: profile_store.cpp  profile_store.h  rule_engine.cpp  rule_engine.h
finguard/src/server/: allocation_handler.cpp  allocation_handler.h  chat_routes.cpp  health_routes.cpp  http_server.cpp  http_server.h  plan_routes.cpp  profile_routes.cpp  route_support.cpp  routes.cpp  routes.h  routes_internal.h  system_routes.cpp  valuecell_routes.cpp
finguard/src/util/: circuit_breaker.cpp  circuit_breaker.h  concurrency_limiter.cpp  concurrency_limiter.h  metrics_registry.cpp  metrics_registry.h  reliability_config.cpp  reliability_config.h  simple_yaml.cpp  simple_yaml.h  token_bucket.cpp  token_bucket.h
finguard/src/valuation/: analysis_workflow.cpp  analysis_workflow.h  fundamentals_db_client.cpp  fundamentals_db_client.h  proxy_config.cpp  proxy_config.h  safety_margin.cpp  safety_margin.h  search_wrapper.cpp  search_wrapper.h  valuation_config.cpp  valuation_config.h  valuation_handler.cpp  valuation_handler.h  yahoo_finance_balance_sheet_sources.cpp  yahoo_finance_client.cpp  yahoo_finance_client.h  yahoo_finance_client_common.cpp  yahoo_finance_client_internal.h  yahoo_finance_net_income_sources.cpp  yahoo_finance_quote_sources.cpp
finguard/tests/: test_cache.cpp  test_circuit_breaker.cpp  test_dns_resolve.cpp  test_fundamentals_db.cpp  test_llm_config.cpp  test_llm_helpers.cpp  test_route_support.cpp  test_rules.cpp  test_token_bucket.cpp  test_valuation_metrics.cpp
finguard/uploads/tmp/: valuation_net_income_PDD.json  valuation_net_income_TCOM.json
frontend/: index.html  package.json  temp_valuecell.spec.cjs  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
frontend/src-tauri/binaries/config/: circuit_breaker.yaml  concurrency.yaml  llm.json  profiles.json  rate_limit.yaml  rules.yaml  valuation.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs
frontend/src/api/: client.ts  store.ts
frontend/src/components/: ErrorBoundary.tsx  Layout.tsx
frontend/src/features/plan/: constants.ts  types.ts  usePlanPage.ts  utils.ts
frontend/src/features/plan/components/: PlanInputPanel.tsx  PlanResultsPanel.tsx
frontend/src/pages/: ChatPage.tsx  PlanPage.tsx  SettingsPage.tsx  StartupPage.tsx  ValueCellPage.tsx
frontend/src/store/: useAppStore.ts
skills/ai-investment-workbook/: SKILL.md
skills/ai-investment-workbook/agents/: openai.yaml
skills/ai-investment-workbook/references/: behavior-and-communication.md  docs-and-teaching.md  engineering-rules.md  finguard-automation.md  phase-tracking.md
skills/project-plan-skill/: SKILL.md
skills/project-plan-skill/references/: next_plan_template.md  project_book_template.md
skills/workbook-skills/: automation.md  logging.md  phase_workflow.md  roles_principles.md  safety.md
tools/: qwen_payload.json
uploads/valuecell_samples/: value_BRK-B.json  value_PDD.json  value_TCOM.json
workbook/: README.md  automation.md  backend_runtime_rules.md  docs_guidelines.md  experience_rules.md  role_and_principles.md  work_log_and_tracking.md
优化/: 基本面分析.md  基本面数据库.md  资产配置规则.md
学习文档/: README.md
学习文档/202601/20260127/: 学习总览.md
学习文档/202601/20260127/20260128/: 学习总览.md
学习文档/202601/20260201/: 学习总览.md
学习文档/20260127/: src_tutorial.md  web_mvc_drogon_json_tutorial.md
学习文档/20260128/: CMake_构建与部署指南.md  学习路线.md  概念解释.md
学习文档/20260201/: 二阶段深度排查手册.md  概念学习笔记.md
学习文档/20260202/: study.md  学习总览.md  整体流程.md  明日前置学习路线.md
学习文档/20260203/: 学习总览.md
学习文档/20260204/: 学习总览.md
学习文档/20260206/: profile_store_学习总览.md  学习总览.md
学习文档/20260209/: LRU 缓存与命中率指标入门.md  trace_id 与链路追踪入门.md  令牌桶限流基础.md  结构化日志基础.md  缓存补充1.md  缓存补充2.md
学习文档/20260210/: phase4spec.md
学习文档/20260214/: study.md  入口限流key.md
学习文档/20260223/: study.md
学习文档/20260224/: profiling工具.md  压测.md  压测场景与负载模型.md  性能目标.md  模型桶.md  瓶颈定位与优化范围.md  配置生效性验收.md
学习文档/20260225/: Profiling 与瓶颈分析.md  优化实施.md  基线压测执行.md  环境搭建.md  连接池与单例复用.md
学习文档/20260226/: CORS与预检请求和Drogon处理链.md  gtest测试.md  测试目标架构.md  设置接口.md
学习文档/phase7/: 从网页到桌面-Phase7核心概念白话指南.md  技术栈选择.md
学习文档/phase8/: tauri和sidecar.md
学习文档/phase9/: DLL分发策略.md  安装包后端联动与密钥安全.md
学习文档/项目难点/: 压测.md
面试总结/: C++突击文档.md  Linux知识.md  tutorial_process_model.md  腾讯20260312.md  腾讯BPO面试突击文档.md  面试手册.md
